Consolidated JS to one file. Allow object monitoring to occur on all pages and delta sync, but full sync must occur from objects page.

--- a/app/templates/sandbox.html
+++ b/app/templates/sandbox.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="shortcut icon" href="{{ url_for('static', filename='files/cpapi.ico') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v={{config['version']}}">
-    <script src="{{url_for('static', filename='js/sandbox.js')}}"></script>
+    <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
   </head>
     <body>
       <div class="main-navigation">
