--- a/app/templates/objects.html
+++ b/app/templates/objects.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="shortcut icon" href="{{ url_for('static', filename='files/cpapi.ico') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v={{config['version']}}">
-    <script src="{{url_for('static', filename='js/objects.js')}}"></script>
+    <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
   </head>
     <body onload="showobjects()">
       <div class="main-navigation">
