--- a/app/templates/scripts.html
+++ b/app/templates/scripts.html
@@ -8,6 +8,7 @@
       <div class="main-navigation">
         {%- include 'postlognav.html' -%}
       </div>
+      {%- include 'syncheader.html' -%}
       <div class="content">
         <div class="scriptform">
           <form action="" method="post">
