--- a/app/templates/policy.html
+++ b/app/templates/policy.html
@@ -8,6 +8,7 @@
       <div class="main-navigation">
         {%- include 'postlognav.html' -%}
       </div>
+      {%- include 'syncheader.html' -%}
       <div class="content">
         <div class="policyform">
           <label><b>Rulebase</b></label>
