--- a/app/templates/sandbox.html
+++ b/app/templates/sandbox.html
@@ -8,6 +8,7 @@
       <div class="main-navigation">
         {%- include 'postlognav.html' -%}
       </div>
+      {%- include 'syncheader.html' -%}
       <div class="content">
         <div class="sandboxform">
           <label><b>Command</b></label>
