Sync status adjustments.

--- a/app/templates/objects.html
+++ b/app/templates/objects.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/cpapi.css') }}?v={{config['version']}}">
     <script src="{{url_for('static', filename='js/cpapi.js')}}"></script>
   </head>
-    <body onload="showobjects()">
+    <body>
       <div class="main-navigation">
         {%- include 'postlognav.html' -%}
       </div>
